--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -13,7 +13,7 @@
                 <exclude name = "jd/plugins/decrypt/**"/>
                 <exclude name = "jd/plugins/host/**"/>
             </fileset>
-            <fileset dir="." includes="GIF/**"/>
+            <fileset dir="." includes="img/**"/>
             <fileset dir="." includes="*.properties"/>
         </jar>
         <delete file="Manifest.MF" failonerror="false" />
