angepasst an LanguagePack_de.properties Rev.28

--- a/trunk/LanguagePack.properties
+++ b/trunk/LanguagePack.properties
@@ -1,8 +1,18 @@
-action.add       = Adds a new download entry 
-action.delete    = Removes a download entry from the list
-action.move_up   = Moves selected entries down
-action.move_down = Moves selected entries up
-action.start     = Starts the download
+action.add.name       = Add Entry
+action.add.desc       = Adds a new download entry
+action.delete.name    = Remove Entry
+action.delete.desc    = Removes a download entry from the list
+action.load.name      = Open File
+action.load.desc      = Opens a file
+action.move_up.name   = Move Up
+action.move_up.desc   = Moves selected entries down
+action.move_down.name = Move Down
+action.move_down.desc = Moves selected entries up
+action.save.name      = Save
+action.save.desc      = Saves the list
+action.start.name     = Download
+action.start.desc     = Starts the download
+action.start.mnem     = 
 error.no_download = No further downloads found
 label.status.welcome = JDownloader - the platform independent downloader
 label.tab.download        = Download list
@@ -13,5 +23,8 @@ label.tab.download.column_host     = Host
 label.tab.download.column_progress = Progress
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Progress
+menu.file = File
+menu.file.load = Open File
+menu.file.save = Save File
 tooltip.status.plugin_decrypt = Shows if a decrytion plugin is active 
 tooltip.status.plugin_host    = Shows if there are currently active downloads
