Neue Menuitems Exit und Ansicht -> Log Fenster. Das Log Fenster Menuitem wird getoggled je nachdem ob das Fenster auf ist oder nicht.

--- a/trunk/LanguagePack.properties
+++ b/trunk/LanguagePack.properties
@@ -2,7 +2,7 @@ action.add.name       = Add Entry
 action.add.desc       = Adds a new download entry
 action.delete.name    = Remove Entry
 action.delete.desc    = Removes a download entry from the list
-action.load.name      = Open File
+action.load.name      = Open
 action.load.desc      = Opens a file
 action.move_up.name   = Move Up
 action.move_up.desc   = Moves selected entries down
@@ -13,6 +13,12 @@ action.save.desc      = Saves the list
 action.start.name     = Download
 action.start.desc     = Starts the download
 action.start.mnem     = 
+action.exit.name      = Exit
+action.exit.desc      = Exit program
+action.exit.mnem      = 
+action.viewlog.name   = Log Window
+action.viewlog.desc   = If checked a log window is shown
+action.viewlog.mnem   =
 error.no_download = No further downloads found
 label.status.welcome = JDownloader - the platform independent downloader
 label.tab.download        = Download list
@@ -26,5 +32,6 @@ label.tab.plugin_activity.column_progress = Progress
 menu.file = File
 menu.file.load = Open File
 menu.file.save = Save File
+menu.view = View
 tooltip.status.plugin_decrypt = Shows if a decrytion plugin is active 
 tooltip.status.plugin_host    = Shows if there are currently active downloads
