actions jetzt mit mnemonics und accelerators (bzw shortcuts)

--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -4,18 +4,22 @@ action.delete.name    = Remove Entry
 action.delete.desc    = Removes a download entry from the list
 action.load.name      = Open
 action.load.desc      = Opens a file
+action.load.mnem      = F
 action.move_up.name   = Move Up
 action.move_up.desc   = Moves selected entries down
 action.move_down.name = Move Down
 action.move_down.desc = Moves selected entries up
 action.save.name      = Save
 action.save.desc      = Saves the list
+action.save.mnem      = S
 action.start.name     = Download
 action.start.desc     = Starts the download
-action.start.mnem     = 
+action.start.mnem     = D
+action.start.accel    = ctrl 9
 action.exit.name      = Exit
 action.exit.desc      = Exit program
-action.exit.mnem      = 
+action.exit.mnem      = B
+action.exit.accel     = ctrl X
 action.viewlog.name   = Log Window
 action.viewlog.desc   = If checked a log window is shown
 action.viewlog.mnem   =
@@ -30,8 +34,12 @@ label.tab.download.column_progress = Progress
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Progress
 menu.file = File
+menu.file_mnem = O
 menu.file.load = Open File
 menu.file.save = Save File
 menu.view = View
+menu.view_mnem = V
+menu.action = Action
+menu.action_men = A
 tooltip.status.plugin_decrypt = Shows if a decrytion plugin is active 
 tooltip.status.plugin_host    = Shows if there are currently active downloads
