--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -1,7 +1,5 @@
 action.add.name       = Add Entry
 action.add.desc       = Adds a new download entry
-action.delete.name    = Remove Entry
-action.delete.desc    = Removes a download entry from the list
 action.edit.items_top.name     = items top
 action.edit.items_top.accel    = alt HOME
 action.edit.items_up.name      = items up
@@ -10,6 +8,10 @@ action.edit.items_down.name    = items down
 action.edit.items_down.accel   = alt DOWN
 action.edit.items_bottom.name  = items bottom
 action.edit.items_bottom.accel = alt ENDaction.load.name      = Open
+action.edit.items_remove.name  = Remove Entries
+action.edit.items_remove.desc  = Removes download entries from the list
+action.edit.items_remove.mnem  = R
+action.edit.items_remove.accel = entf
 action.load.desc      = Opens a file
 action.load.mnem      = F
 action.move_up.name   = Move Up
