--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -25,6 +25,10 @@ action.start.name     = Download
 action.start.desc     = Starts the download
 action.start.mnem     = D
 action.start.accel    = ctrl 9
+action.pause.name          = Pause
+action.pause.desc          = Stop after these downloads
+action.pause.mnem          = E
+action.pause.accel         = ctrl 0
 action.exit.name      = Exit
 action.exit.desc      = Exit program
 action.exit.mnem      = B
