--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -1,60 +1,136 @@
 action.add.name       = Add Entry
 action.add.desc       = Adds a new download entry
-action.edit.items_top.name     = items top
+action.add.mnem		  = H
+action.add.accel      = ctrl V
+
+action.configuration.name  = Properties 
+action.configuration.desc  = Change Properties
+action.configuration.mnem  = C 
+action.configuration.accel = F11
+
+action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
+action.dnd.name            = Drag&Drop Target
+action.dnd.mnem            = 6
+action.dnd.accel           = ctrl 6
+
+action.edit.items_top.name     = Items top
+action.edit.items_top.desc     = Move selected items to the top
+action.edit.items_top.mnem     = E
 action.edit.items_top.accel    = alt HOME
-action.edit.items_up.name      = items up
+
+action.edit.items_up.name      = Items up
+action.edit.items_up.desc      = Move selected items up
+action.edit.items_up.mnem      = O
 action.edit.items_up.accel     = alt UP
-action.edit.items_down.name    = items down
+
+action.edit.items_down.name    = Items down
+action.edit.items_down.desc    = Move selected items down
+action.edit.items_down.mnem    = U
 action.edit.items_down.accel   = alt DOWN
-action.edit.items_bottom.name  = items bottom
-action.edit.items_bottom.accel = alt ENDaction.load.name      = Open
+
+action.edit.items_bottom.name  = Items bottom
+action.edit.items_bottom.desc  = Move selected items to the bottom
+action.edit.items_bottom.mnem  = L
+action.edit.items_bottom.accel = alt END
+
 action.edit.items_remove.name  = Remove Entries
 action.edit.items_remove.desc  = Removes download entries from the list
 action.edit.items_remove.mnem  = R
 action.edit.items_remove.accel = entf
-action.load.desc      = Opens a file
+
+action.load.name      = Opens a file
+action.load.desc      = Open a linklist
 action.load.mnem      = F
+action.load.accel     = ctrl O
+
+action.search.desc  = Search for files
+action.search.name  = Search
+action.search.mnem 	= S
+action.search.accel = S
+
+action.load_container.name  = Opens a container
+action.load_container.desc  = Loads a decrypted linkfile
+action.load_container.mnem  = C
+action.load_container.accel = ctrl shift O
+
 action.move_up.name   = Move Up
 action.move_up.desc   = Moves selected entries down
 action.move_down.name = Move Down
 action.move_down.desc = Moves selected entries up
+
 action.save.name      = Save
 action.save.desc      = Saves the list
 action.save.mnem      = S
+action.save.accel     = ctrl S
+
 action.start.name     = Download
 action.start.desc     = Starts the download
 action.start.mnem     = D
 action.start.accel    = ctrl 9
+
 action.pause.name          = Pause
 action.pause.desc          = Stop after these downloads
 action.pause.mnem          = E
 action.pause.accel         = ctrl 0
+
 action.exit.name      = Exit
 action.exit.desc      = Exit program
 action.exit.mnem      = B
 action.exit.accel     = ctrl X
+
 action.viewlog.name   = Log Window
 action.viewlog.desc   = If checked a log window is shown
-action.viewlog.mnem   =
+action.viewlog.mnem   = V
+action.viewlog.accel  = F1
+
+action.reconnect.desc      = Manual reconnect
+action.reconnect.name      = Manual reconnect
+action.reconnect.mnem      = R
+action.reconnect.accel     = ctrl R
+
+action.update.desc          = Update
+action.update.name			= Autoupdate
+action.update.mnem			= A
+action.update.accel			= ctrl 7
+
 error.no_download = No further downloads found
+
 label.status.welcome = JDownloader - the platform independent downloader
+
 label.tab.download        = Download list
-label.tab.plugin_activity = Plugin activities
+
 label.tab.download.column_index    = #
 label.tab.download.column_link     = Download
 label.tab.download.column_host     = Host
 label.tab.download.column_progress = Progress
+
+label.tab.plugin_activity = Plugin activities
 label.tab.plugin_activity.column_plugin   = Name
+label.tab.download.column_status          = Status
 label.tab.plugin_activity.column_progress = Progress
+
+label.tab.plugin_activity = Pluginactivity
+label.tab.plugin_activity.column_link = Link
+label.tab.plugin_activity.column_status= Status
+label.tab.plugin_activity.column_plugin   = Service
+label.tab.plugin_activity.column_progress = Progress
+
 menu.file = File
 menu.file_mnem = O
 menu.file.load = Open File
 menu.file.save = Save File
+
 menu.edit = Edit
 menu.edit_mnem = E
+
 menu.view = View
 menu.view_mnem = V
+
 menu.action = Action
-menu.action_men = A
+menu.action_mnem = A
+
+menu.extra = Extra
+menu.extra_mnem = E
+
 tooltip.status.plugin_decrypt = Shows if a decrytion plugin is active 
 tooltip.status.plugin_host    = Shows if there are currently active downloads
