--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -40,6 +40,7 @@
             <fileset dir="${res}">
                 <include name="META-INF/services/*"/>
                 <exclude name="META-INF/services/jd.plugins.PluginForContainer"/>
+                <exclude name="META-INF/services/jd.plugins.PluginOptional"/>
             </fileset> 
         </jar>
 
