--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -64,7 +64,7 @@ action.save.mnem      = S
 action.save.accel     = ctrl S
 
 action.start.name     = Download
-action.start.desc     = Starts the download
+action.start.desc     = Starts/Stops the download
 action.start.mnem     = D
 action.start.accel    = ctrl 9
 
