--- a/trunk/ressourcen/LanguagePack.properties
+++ b/trunk/ressourcen/LanguagePack.properties
@@ -8,7 +8,7 @@ action.configuration.desc  = Change Properties
 action.configuration.mnem  = C 
 action.configuration.accel = F11
 
-action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
+action.dnd.desc            = Clipboard + Drag&Drop Target show/hide. You can drop a link on the target
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
 action.dnd.accel           = ctrl 6
@@ -68,6 +68,16 @@ action.start.desc     = Starts/Stops the download
 action.start.mnem     = D
 action.start.accel    = ctrl 9
 
+action.tester.name          = Testtrigger
+action.tester.desc          = Fires a Testtrigger Event
+action.tester.mnem          = T
+action.tester.accel         = ctrl T
+
+action.unrar.name		   = Extract
+action.unrar.desc		   = Extracts the RAR-files in your downloadfolder
+action.unrar.mnem		   = x
+action.unrar.accel		   = ctrl X
+
 action.pause.name          = Pause
 action.pause.desc          = Stop after these downloads
 action.pause.mnem          = E
@@ -117,6 +127,9 @@ label.tab.plugin_activity.column_progress = Progress
 
 menu.file = File
 menu.file_mnem = O
+menu.file.load_dlc = Load DLC
+menu.file.save_dlc = Save Links as DLC
+
 menu.file.load = Open File
 menu.file.save = Save File
 
@@ -134,3 +147,24 @@ menu.extra_mnem = E
 
 tooltip.status.plugin_decrypt = Shows if a decrytion plugin is active 
 tooltip.status.plugin_host    = Shows if there are currently active downloads
+
+action.passwordlist.name   = Edit passwordlist
+action.passwordlist.desc   = shows the editor for your passwordlist
+action.passwordlist.mnem   = p
+action.passwordlist.accel   = F3
+
+button.save.name = Save
+button.save.mnem = S
+
+button.cancel.name = Cancel
+button.cancel.mnem = c
+
+unrar.name = Unrar
+unrar.config.activate = Activate Unrar:
+unrar.config.cmd = Command for an english version of Unrar: 
+unrar.config.delete = Delete if unpacking succeeded: 
+unrar.config.overwrite = Overwrite files: 
+unrar.interaction.name = Execute Unrar
+unrar.interaction.always = always
+unrar.interaction.never = never
+unrar.interaction.linkgrabber = per link/Linkgrabber
