--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -11,6 +11,7 @@
     </target>
 
     <target name="jar">
+        <mkdir dir="${dist}/optional"/>
         <!-- jDownloader -->
         <manifest file="Manifest.MF">
             <attribute name="Created-By" value="astaldo/coalado" />
@@ -18,14 +19,14 @@
         </manifest>
         <jar jarfile="${dist}/JDownloader.jar" manifest="Manifest.MF">
             <fileset dir="${cls}">
-                <include name="**/*.class" />                
+                <include name="**/*.class" />
                 <exclude name="jd/plugins/decrypt/**" />
                 <exclude name="jd/plugins/host/**" />
                 <exclude name="jd/plugins/container/**" />
                 <exclude name="jd/plugins/optional/**" />
             </fileset>
             <fileset dir="${res}">
-                
+
                 <include name="*.properties" />
                 <exclude name="jd/captcha/methods" />
             </fileset>
@@ -38,10 +39,10 @@
         </manifest>
         <jar jarfile="${dist}/webupdater.jar" manifest="Manifest.MF">
             <fileset dir="${cls}">
-                <include name="jd/update/*.class" />    
-				<include name="jd/utils/HTMLEntities.class" /> 				
+                <include name="jd/update/*.class" />
+				<include name="jd/utils/HTMLEntities.class" />
             </fileset>
-       
+
         </jar>
         <delete file="Manifest.MF" failonerror="false" />
         <!-- Plugins -->
@@ -57,23 +58,34 @@
             </fileset>
         </jar>
 
-
-		
-		
+        <!-- JDTrayIcon-->
 		<manifest file="Manifest.MF">
-            <attribute name="Created-By" value="coalado" />           
+            <attribute name="Created-By" value="coalado" />
         </manifest>
-        <jar jarfile="${dist}/JDTrayIcon.jar" manifest="Manifest.MF">
+        <jar jarfile="${dist}/optional/JDTrayIcon.jar" manifest="Manifest.MF">
             <fileset dir="${cls}">
-                <include name="jd/plugins/optional/JDTrayIcon.class" />        
+                <include name="jd/plugins/optional/JDTrayIcon.class" />
             </fileset>
 			     <fileset dir="${res}">
                 <include name="META-INF/services/jd.plugins.PluginOptional" />
             </fileset>
         </jar>
         <delete file="Manifest.MF" failonerror="false" />
-		
-		
+
+        <!-- PluginExecute-->
+        <manifest file="Manifest.MF">
+            <attribute name="Created-By" value="astaldo" />
+        </manifest>
+        <jar jarfile="${dist}/optional/PluginExecute.jar" manifest="Manifest.MF">
+            <fileset dir="${cls}">
+                <include name="jd/plugins/optional/PluginExecute.class" />
+            </fileset>
+                 <fileset dir="${res}">
+                <include name="META-INF/services/jd.plugins.PluginOptional" />
+            </fileset>
+        </jar>
+        <delete file="Manifest.MF" failonerror="false" />
+
     </target>
 
 
@@ -90,9 +102,9 @@
     </target>
     <target name="standardBuild" depends="compile,jar">
     </target>
-	
 
-  
+
+
 
 
 </project>
