--- a/trunk/tools/unrar/src/makefile.unix
+++ b/trunk/tools/unrar/src/makefile.unix
@@ -10,6 +10,7 @@
 #CXXFLAGS=-O2
 DEFINES=-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
 STRIP=strip
+LDFLAGS=-static
 DESTDIR=/usr
 
 # Linux using LCC
